--- a/client/life-goats-app/app/newsletter/december-2024/styles.css
+++ b/client/life-goats-app/app/newsletter/december-2024/styles.css
@@ -22,6 +22,7 @@
     padding: 100px 0;
     text-align: center;
     font-size: 1em;
+    z-index: 2000;
   }
   
   @media screen and (min-width: 768px) {
